--- a/rock-paper-scissors/package.json
+++ b/rock-paper-scissors/package.json
@@ -1,7 +1,40 @@
 {
   "private": true,
   "version": "0.0.0",
-  "dependencies": {},
-  "devDependencies": {},
-  "scripts": {}
+  "devDependencies": {
+    "vitest": "^0.9.4"
+  },
+  "scripts": {"test":"vitest"},
+  "name": "rock-paper-scissors",
+  "main": "app.js",
+  "dependencies": {
+    "assertion-error": "^1.1.0",
+    "chai": "^4.5.0",
+    "check-error": "^1.0.3",
+    "deep-eql": "^4.1.4",
+    "esbuild": "^0.14.54",
+    "esbuild-windows-64": "^0.14.54",
+    "function-bind": "^1.1.2",
+    "get-func-name": "^2.0.2",
+    "hasown": "^2.0.2",
+    "is-core-module": "^2.15.0",
+    "local-pkg": "^0.4.3",
+    "loupe": "^2.3.7",
+    "nanoid": "^3.3.7",
+    "path-parse": "^1.0.7",
+    "pathval": "^1.1.1",
+    "picocolors": "^1.0.1",
+    "postcss": "^8.4.41",
+    "resolve": "^1.22.8",
+    "rollup": "^2.77.3",
+    "source-map-js": "^1.2.0",
+    "supports-preserve-symlinks-flag": "^1.0.0",
+    "tinypool": "^0.1.3",
+    "tinyspy": "^0.3.3",
+    "type-detect": "^4.1.0",
+    "vite": "^2.9.18"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
